Update Quarto pages and regenerate index.qmd from database

--- a/pages/1261.qmd
+++ b/pages/1261.qmd
@@ -5,8 +5,9 @@ title: "Salmon Marine Interactions - SMI - COE Section"
 ## 🧬 Project Summary
 
 **Lead(s):** Chrys Neville, Michelle Charbonneau  
-**Location:** N/A  
-**Status:** New  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
+**Location:**   
 
 **Overview:**  
-No description available.
+
