--- a/pages/2397.qmd
+++ b/pages/2397.qmd
@@ -5,8 +5,9 @@ title: "Identifying good practices for considering Indigenous Knowledge in Rebui
 ## 🧬 Project Summary
 
 **Lead(s):** Carrie Holt  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Quantitative Assessment Methods  
+**Location:**   
 
 **Overview:**  
 Indigenous knowledge includes countless generations of place-based Pacific salmon experience that cannot be recreated or measured. Guided by the Eptuaptmumk (“Two-Eyed Seeing”) framework, we are partnering with First Nations on the West coast of Vancouver Island (WCVI) and University of Victoria to identify rebuilding targets and reference points for Chinook salmon that pair Indigenous Knowledge Systems with Western Science, based on interviews and focus groups with Indigenous Knowledge holders and a review of assessment literature.
