--- a/pages/2406.qmd
+++ b/pages/2406.qmd
@@ -5,8 +5,9 @@ title: "Changing coastal productivity: Using sediment cores, water properties an
 ## 🧬 Project Summary
 
 **Lead(s):** Sophia Johannessen  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Ocean Sciences (OSD)  
+**Section:** Ecology and Biogeochemistry   
+**Location:**   
 
 **Overview:**  
 Has climate change reduced the amount of plankton at the bottom of the food web in BC waters, reducing the carrying capacity for salmon? Have smaller phytoplankton replaced diatoms, lengthening the food chain and making food less nutritious for salmon? This study uses chemical markers in sediment cores and water samples to investigate food web changes in BC coastal inlets.
