--- a/pages/2419.qmd
+++ b/pages/2419.qmd
@@ -5,8 +5,9 @@ title: "Pilot skills study of new hatchery tray configuration."
 ## 🧬 Project Summary
 
 **Lead(s):** Cher LaCoste, Noel Collier  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Nearshore Ecosystems  
+**Location:**   
 
 **Overview:**  
-No description available.
+
