--- a/pages/2422.qmd
+++ b/pages/2422.qmd
@@ -5,8 +5,9 @@ title: "Development and application of laser ablation-inductively coupled plasma
 ## 🧬 Project Summary
 
 **Lead(s):** Andrew Ross, Xiangjun Liao, Nicole LaForge  
+**Division:** Ocean Sciences (OSD)  
+**Section:** Ecology and Biogeochemistry   
 **Location:** ["IOS Sidney"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Advances in lab microchemistry (mass spectrometry) can be used to track juvenile salmon life stage history from ear bone (otolith) samples. Body size at saltwater entry and habitat use can be measured and compared to fish health and age. This project develops methods for “laser ablation-inductively coupled plasma-mass spectrometry” to test on juvenile Chinook sampled in the Follow the Fish program.
