--- a/pages/2425.qmd
+++ b/pages/2425.qmd
@@ -5,8 +5,9 @@ title: "Development of geospatial tools for large-scale freshwater salmon habita
 ## 🧬 Project Summary
 
 **Lead(s):** Josie Iacarella  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Freshwater Ecosystems  
+**Location:**   
 
 **Overview:**  
 Identifying individual and cumulative threats to salmon and their habitat is critical for effective management and restoration actions. This project estimates and maps nine human activities and landscape disturbance-based threats and four climate change-based threats for the stream network in the Fraser Basin. Results identify threat levels across salmon Conservation Units and the human activities and land uses that contributed most to threats.
