--- a/pages/2433.qmd
+++ b/pages/2433.qmd
@@ -5,8 +5,9 @@ title: "Integrated Salish Sea acoustic monitoring of salmon and salmon prey"
 ## 🧬 Project Summary
 
 **Lead(s):** Stephane Gauthier  
+**Division:** Ocean Sciences (OSD)  
+**Section:** Ecology and Biogeochemistry   
 **Location:** ["Salish Sea"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Acoustic tools can provide important information on salmon ecology (food web) and salmon survival in marine areas. These salmon habitat and abundance monitoring studies use multi-frequency echosounders from mooring stations and mobile units in West Coast Vancouver Island sounds and the Salish sea to measure aspects of salmon forage species (zooplankton, krill, and Pacific herring) and count juvenile and adult salmon along their migration.
