--- a/pages/2435.qmd
+++ b/pages/2435.qmd
@@ -5,8 +5,9 @@ title: "Intergenerational transfer and parental origins of DNA methylation varia
 ## 🧬 Project Summary
 
 **Lead(s):** Eric Rondeau, Tim Healy, Kyle Wellband  
+**Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
+**Section:** Molecular Genetics  
 **Location:** ["PBS Nanaimo"]  
-**Status:** Ongoing  
 
 **Overview:**  
-Chemical reactions in a salmon body decide which genes are expressed in a process called “DNA methylation.” This hatchery genetics study sequences methylation across the genome to compare between hatchery and natural origin to see if salmon offspring inherit DNA methylation from parents (epigenetics) and how this could inform hatchery breeding methods.
+Chemical reactions in a salmon body decide which genes are expressed in a process called “DNA methylation.” This hatchery genetics study sequences methylation across the genome to compare between hatchery and natural origin to see if salmon offspring inherit DNA methylation from parents (epigenetics) and how this could inform hatchery breeding methods. 
