--- a/pages/2442.qmd
+++ b/pages/2442.qmd
@@ -5,8 +5,9 @@ title: "Graduate Research into 1) habitat use by juvenile Chinook Salmon in the 
 ## 🧬 Project Summary
 
 **Lead(s):** Lauren Weir  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Fraser and Interior Area Salmon Stock Assessment  
+**Location:**   
 
 **Overview:**  
 Okanagan Chinook are endangered due to habitat destruction and over-fishing. Juvenile Chinook habitat use and risk from predators has not been well studied and may be key factors regarding climate change, invasive species, and restoration efforts. This population study hires graduate students to research juvenile Okanagan Chinook and track survival through tagging.
