--- a/pages/2444.qmd
+++ b/pages/2444.qmd
@@ -5,8 +5,9 @@ title: "Assessment of the distribution and abundance of juvenile Chinook salmon 
 ## 🧬 Project Summary
 
 **Lead(s):** Lauren Weir  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Fraser and Interior Area Salmon Stock Assessment  
 **Location:** ["Thompson","Nicola River"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Historic flooding in 2021 impacted salmon spawning and rearing habitat throughout the lower Thompson River and tributaries. This salmon population monitoring study counts juvenile Chinook (night snorkel surveys) in the lower Thompson mainstem and tributaries and compare to previous years to assess the population and habitat recovery.
