--- a/pages/2452.qmd
+++ b/pages/2452.qmd
@@ -5,8 +5,9 @@ title: "Genetic associations with age of return in male Canadian Chinook Salmon"
 ## 🧬 Project Summary
 
 **Lead(s):** Eric Rondeau, Tim Healy, Kyle Wellband  
+**Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
+**Section:** Molecular Genetics  
 **Location:** ["Chilliwack River","Puntledge River","Qualicum River"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Jacks (males that return a year early) are a natural source of genetic diversity for Chinook, but too many jacks in a population can have limited breeding success and reduce the body size of the population. Hatchery breeding increases the number of jacks, and hatchery staff screen out jacks by body size, which is uncertain. This genetic monitoring study samples male Chinook tissues from the Chilliwack, Puntledge, and Qualicum rivers to sequence the genes, compare the y-chromosome haplotypes specific to jacks, and develop a rapid screening test for broodstock selection.
