--- a/pages/2522.qmd
+++ b/pages/2522.qmd
@@ -5,8 +5,9 @@ title: "Explanation for the Collapse of the Commercial Chum Salmon Fishery in Br
 ## 🧬 Project Summary
 
 **Lead(s):** Chrys Neville  
-**Location:** N/A  
-**Status:** Not funded  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
+**Location:**   
 
 **Overview:**  
-No description available.
+
