--- a/pages/2534.qmd
+++ b/pages/2534.qmd
@@ -5,8 +5,9 @@ title: "Understanding the impact of Arctic outflow winds on British Columbia fjo
 ## 🧬 Project Summary
 
 **Lead(s):** Jennifer Jackson  
+**Division:** Ocean Sciences (OSD)  
+**Section:** Ecology and Biogeochemistry   
 **Location:** ["Mainland Inlets"]  
-**Status:** New  
 
 **Overview:**  
-Arctic air masses move from the interior to coastal inlets, cooling and adding oxygen to the marine habitat. Fjords where this cooling occurs can become a marine refuge for salmon. This project monitors climate conditions in BC mainland fjords to measure the impact on salmon habitat and study how these factors may impact other coastal inlets.
+Arctic air masses move from the interior to coastal inlets, cooling and adding oxygen to the marine habitat. Fjords where this cooling occurs can become a marine refuge for salmon. This project monitors climate conditions in BC mainland fjords to measure the impact on salmon habitat and study how these factors may impact other coastal inlets. 
