--- a/pages/2546.qmd
+++ b/pages/2546.qmd
@@ -5,8 +5,9 @@ title: "Fishery & Assessment Data Section - Data Stewardship Unit"
 ## 🧬 Project Summary
 
 **Lead(s):** Shelee Hamilton  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Fishery and Assessment Data  
+**Location:**   
 
 **Overview:**  
-No description available.
+
