--- a/pages/2547.qmd
+++ b/pages/2547.qmd
@@ -5,8 +5,9 @@ title: "Fishery & Assessment Data Section - Knowledge Mobilization Unit"
 ## 🧬 Project Summary
 
 **Lead(s):** Shelee Hamilton, Tom Bird  
-**Location:** N/A  
-**Status:** New  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Fishery and Assessment Data  
+**Location:**   
 
 **Overview:**  
-No description available.
+
