--- a/pages/2560.qmd
+++ b/pages/2560.qmd
@@ -5,8 +5,9 @@ title: "PSSI High Seas Salmon Research - West Coast Vancouver Island (and transi
 ## 🧬 Project Summary
 
 **Lead(s):** Jackie King, Michelle Charbonneau  
-**Location:** N/A  
-**Status:** Not funded  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
+**Location:**   
 
 **Overview:**  
-No description available.
+
