--- a/pages/2561.qmd
+++ b/pages/2561.qmd
@@ -5,8 +5,9 @@ title: "State of Pacific Salmon Report 2024-2025"
 ## 🧬 Project Summary
 
 **Lead(s):** Sue Grant  
-**Location:** N/A  
-**Status:** New  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
+**Location:**   
 
 **Overview:**  
-No description available.
+
