--- a/pages/2572.qmd
+++ b/pages/2572.qmd
@@ -5,8 +5,9 @@ title: "Assessing Salinity Alteration of Nursery Conditions for Salmon Smolts fo
 ## 🧬 Project Summary
 
 **Lead(s):** Terri Sutherland  
-**Location:** N/A  
-**Status:** New  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Nearshore Ecosystems  
+**Location:**   
 
 **Overview:**  
-No description available.
+
