--- a/pages/3104.qmd
+++ b/pages/3104.qmd
@@ -5,8 +5,9 @@ title: "Establishing a feed assessment program in Pacific salmon enhancement hat
 ## 🧬 Project Summary
 
 **Lead(s):** Ian Forster  
-**Location:** N/A  
-**Status:** New  
+**Division:**   
+**Section:** Nearshore Ecosystems  
+**Location:**   
 
 **Overview:**  
-No description available.
+
