--- a/pages/3107.qmd
+++ b/pages/3107.qmd
@@ -5,8 +5,9 @@ title: "Scenario Planning: improving the adaptability of Pacific salmon hatchery
 ## 🧬 Project Summary
 
 **Lead(s):** Sue Grant, Bronwyn MacDonald, Lenora Turcotte, David Willis  
-**Location:** N/A  
-**Status:** New  
+**Division:**   
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
+**Location:**   
 
 **Overview:**  
-No description available.
+
