--- a/pages/2399.qmd
+++ b/pages/2399.qmd
@@ -5,8 +5,9 @@ title: "Risk Assessment Method for Salmon – Development for Regional Implement
 ## 🧬 Project Summary
 
 **Lead(s):** Christina Czembor  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Regional Director's Office  
+**Section:** Regional Director's Office  
+**Location:**   
 
 **Overview:**  
 Researchers in 2010 developed a tool called the Risk Assessment Method for Salmon that uses population and ecosystem information to identify and prioritize salmon population bottlenecks at different life stages. The tool constantly evolves, but currently uses awkward technology and lacks marine information. This stock management support project updates regional salmon information including marine and freshwater life stage information and converts the old Excel program to a more visual and user-friendly R programming design.
