--- a/pages/2402.qmd
+++ b/pages/2402.qmd
@@ -5,8 +5,9 @@ title: "Quantifying Yukon Chinook migration mortality and its implications for f
 ## 🧬 Project Summary
 
 **Lead(s):** Brendan Connors, Adam O'Dell  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Yukon/Transboundary Rivers Area Salmon Stock Assessment  
 **Location:** ["Yukon River"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Yukon River Chinook numbers have been declining and a questionable proportion of returning adults do not migrate past the border between Alaska and Canada. This transboundary tracking study uses radio-telemetry from towers and arial surveys to expand Alaska’s Chinook tagging efforts and locate the area and cause of the drop in numbers using death rate, migration speed, and timing.
