--- a/pages/2405.qmd
+++ b/pages/2405.qmd
@@ -4,9 +4,10 @@ title: "Biological models to support prioritizing salmon stocks under future cli
 
 ## 🧬 Project Summary
 
-**Lead(s):** Patrick Thompson, Cameron Freshwater, Brendan Connors, Josie Iacarella,  
+**Lead(s):** Patrick Thompson, Cameron Freshwater, Brendan Connors, Josie Iacarella,   
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
 **Location:** ["Pacific Biological Station","PSEC West Vancouver","IOS Sidney"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Predicting how salmon stocks respond to climate change is difficult because salmon life stages span diverse habitats seasonally. This modelling project studies the relationships between salmon survival and environmental data in freshwater and marine habitats, then applies those relationships to more specific stocks with less available information.  By modelling these relationships across all salmon stocks, decision-makers are better able to predict the state of salmon stocks under a variety of climate change scenarios.
