--- a/pages/2409.qmd
+++ b/pages/2409.qmd
@@ -5,8 +5,9 @@ title: "Convergent tracks: a tagging study to quantify salmon predation by sea l
 ## 🧬 Project Summary
 
 **Lead(s):** Strahan Tucker, Cameron Freshwater  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
 **Location:** ["Triangle Island","Haida Gwaii"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Steller sea lions are hypothesized to feed on large numbers of adult Fraser River sockeye salmon when the salmon migrate past Triangle Island, near northern Vancouver Island. This project tags sockeye salmon and Steller sea lions, and also analyzes sea lion diets, to determine if the area is a survival bottleneck.
