--- a/pages/2410.qmd
+++ b/pages/2410.qmd
@@ -5,8 +5,9 @@ title: "Improved decision making for salmon by understanding the threats of fres
 ## 🧬 Project Summary
 
 **Lead(s):** Thomas Therriault, Cher LaCoste  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Nearshore Ecosystems  
+**Location:**   
 
 **Overview:**  
 Aquatic Invasive Species (AIS) continue to be introduced and expand their ranges aided by climate change, threatening biodiversity and Pacific salmon survival. This risk assessment study targets over 400 invasive species within or approaching five freshwater ecoregions in BC. Researchers developed a Non-Indigenous Species Screening Tool (NISST) that allows managers to prioritize the (AIS) threats when creating regulations and salmon recovery plans.
