--- a/pages/2412.qmd
+++ b/pages/2412.qmd
@@ -5,8 +5,9 @@ title: "Investigation of the impacts of singular and coinciding acute climate st
 ## 🧬 Project Summary
 
 **Lead(s):** Chris Pearce  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Nearshore Ecosystems  
 **Location:** ["PBS Nanaimo","PSEC West Vancouver"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Ocean warming and acidic upwelling changes the zooplankton food web for young salmon in the Northeast Pacific. This project measures the survival and nutritional value of pteropods (zooplankton) under different temperatures and acidic conditions in a lab. Researchers then compare lab findings to natural zooplankton conditions.
