--- a/pages/2414.qmd
+++ b/pages/2414.qmd
@@ -5,8 +5,9 @@ title: "South Coast freshwater ecological indicator pilot"
 ## 🧬 Project Summary
 
 **Lead(s):** Diana McHugh  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** South Coast Area Salmon Stock Assessment  
+**Location:**   
 
 **Overview:**  
 Streamflow, water quality, and aquatic insect information is useful when assessing salmon habitat at risk. This freshwater ecosystem monitoring project expands the range of data collection to include between five to 14 more Chinook habitat systems where researchers sample streamflow, temperature, dissolved oxygen, pH, and benthic macroinvertebrates.
