--- a/pages/2415.qmd
+++ b/pages/2415.qmd
@@ -5,8 +5,9 @@ title: "A Decision Support Framework for Identifying and Characterizing the Non-
 ## 🧬 Project Summary
 
 **Lead(s):** Thomas Therriault, Cher LaCoste  
-**Location:** N/A  
-**Status:** Not funded  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Nearshore Ecosystems  
+**Location:**   
 
 **Overview:**  
-No description available.
+
