--- a/pages/2418.qmd
+++ b/pages/2418.qmd
@@ -5,8 +5,9 @@ title: "Prediction of reproductive success of Chinook salmon based on Thiamine c
 ## 🧬 Project Summary
 
 **Lead(s):** Ian Forster, Cher LaCoste  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Nearshore Ecosystems  
 **Location:** ["Albion Test Fishery"]  
-**Status:** Ongoing  
 
 **Overview:**  
-Thiamine (vitamin B1) deficiency in salmon is diet-related and could be tied to warming oceans and changing food webs. The nutrient deficiency lowers the survival rate for salmon fry and has been observed in Yukon and California Chinook, but hasn’t been studied well in BC. This fish health monitoring study gathers Chinook tissue samples from the Albion test fishery and hatcheries to measure thiamine, fatty acids, and other health parameters to help predict and monitor vulnerable stocks.
+Thiamine (vitamin B1) deficiency in salmon is diet-related and could be tied to warming oceans and changing food webs. The nutrient deficiency lowers the survival rate for salmon fry and has been observed in Yukon and California Chinook, but hasn’t been studied well in BC. This fish health monitoring study gathers Chinook tissue samples from the Albion test fishery and hatcheries to measure thiamine, fatty acids, and other health parameters to help predict and monitor vulnerable stocks. 
