--- a/pages/2421.qmd
+++ b/pages/2421.qmd
@@ -5,8 +5,9 @@ title: "Measurement of stress hormones in scales and its application for the ide
 ## 🧬 Project Summary
 
 **Lead(s):** Stewart Johnson  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
 **Location:** ["PBS Nanaimo"]  
-**Status:** Ongoing  
 
 **Overview:**  
-Chronic stress impacts fish health and can be measured in salmon by sampling hormone (cortisol) and enzyme deposits in scales. This lab and hatchery study gathers coho and Chinook scale samples from broodstock surveys to develop methods of measuring chronic and acute stress hormone levels that could be expanded to monitor salmon health responses to stressors including climate change.
+Chronic stress impacts fish health and can be measured in salmon by sampling hormone (cortisol) and enzyme deposits in scales. This lab and hatchery study gathers coho and Chinook scale samples from broodstock surveys to develop methods of measuring chronic and acute stress hormone levels that could be expanded to monitor salmon health responses to stressors including climate change. 
