--- a/pages/2423.qmd
+++ b/pages/2423.qmd
@@ -5,8 +5,9 @@ title: "Complementing British Columbia’s coasts longest Sea Surface Temperatur
 ## 🧬 Project Summary
 
 **Lead(s):** Jennifer Jackson  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Ocean Sciences (OSD)  
+**Section:** State of the Ocean  
+**Location:**   
 
 **Overview:**  
 Continuous marine salmon habitat measurements are important for fisheries management. The BC Shore Station Program collects long-term sea surface temperature and salinity at twelve coastal stations, but the data are coarse and limited by weather and labour. This ecosystem monitoring project is testing and installing a minimum of four independent water quality logging stations spanning the coast to collect and transmit hourly real-time data posted online.
