--- a/pages/2426.qmd
+++ b/pages/2426.qmd
@@ -5,8 +5,9 @@ title: "Sakinaw Sockeye Juvenile Research on Measures to Increase Marine Surviva
 ## 🧬 Project Summary
 
 **Lead(s):** Kevin Pellett, Nicolette Watson, Karalea Filipovic  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** South Coast Area Salmon Stock Assessment  
 **Location:** ["Hodgson Islands","Sakinaw Lake","Salish Sea","Strait of Georgia"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Marine survival is a limiting factor for the endangered Sakinaw Lake sockeye smolts who migrate past hundreds of harbour seals at Hodgson Islands in the Strait of Georgia every spring. This salmon tracking study traps and PIT tags up to 2,500 sockeye smolts at a smolt fence, then transports the sockeye by boat past the seal colony and compares the survival rate of transported sockeye to naturally migrating smolts.
