--- a/pages/2430.qmd
+++ b/pages/2430.qmd
@@ -5,8 +5,9 @@ title: "Feasibility of Estimating Chilko River Smolt Abundance Using Upward- and
 ## 🧬 Project Summary
 
 **Lead(s):** Daniel Doutaz  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Fraser and Interior Area Salmon Stock Assessment  
 **Location:** ["Chilko"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Chilko Lake sockeye smolts are counted each spring from a fish-counting weir, and these counts inform broader Fraser River fisheries management decisions. However, with earlier spring freshets due to the warming climate, crews must remove the weir more often before the smolts are counted. This salmon monitoring project tests upward-looking and side-looking SONAR units that can be used during high flows, and compares the results to the weir counts.
