--- a/pages/2436.qmd
+++ b/pages/2436.qmd
@@ -5,8 +5,9 @@ title: "Chum whole genome sequencing for improved stock delineation"
 ## 🧬 Project Summary
 
 **Lead(s):** Eric Rondeau, Tim Healy, Kyle Wellband  
+**Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
+**Section:** Molecular Genetics  
 **Location:** ["Fraser","Chilliwack River"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Genetic sequencing is an effective tool to identify salmon species by stock, but this method is only available where enough genetic information has been gathered and sufficient differentiation has been detected. South Coast chum salmon have not been sequenced intensely enough to fully describe population structure delineation, so this genome sequencing study gathers DNA from across the region to assess differences in genetic markers that could be used to maximize the resolution.
