--- a/pages/2437.qmd
+++ b/pages/2437.qmd
@@ -5,8 +5,9 @@ title: "Adaptive genetic variation and climate change resilience in Canadian Pac
 ## 🧬 Project Summary
 
 **Lead(s):** Eric Rondeau, Tim Healy, Kyle Wellband  
+**Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
+**Section:** Molecular Genetics  
 **Location:** ["PBS Nanaimo"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections.
