--- a/pages/2443.qmd
+++ b/pages/2443.qmd
@@ -5,8 +5,9 @@ title: "Quantitative assessment of the impact of Smallmouth Bass suppression eff
 ## 🧬 Project Summary
 
 **Lead(s):** Daniel Doutaz  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Fraser and Interior Area Salmon Stock Assessment  
 **Location:** ["Cultus"]  
-**Status:** Ongoing  
 
 **Overview:**  
-Introduced smallmouth bass pose a predation risk to sockeye in Cultus Lake. However, some anglers prefer fishing for smallmouth bass and strongly oppose actions to lower the bass population. This predator research study captures (electrofrishing), tags (PIT and acoustic transmitters), and biosamples smallmouth bass to assess population control methods and interviews anglers to develop a community plan.
+Introduced smallmouth bass pose a predation risk to sockeye in Cultus Lake. However, some anglers prefer fishing for smallmouth bass and strongly oppose actions to lower the bass population. This predator research study captures (electrofrishing), tags (PIT and acoustic transmitters), and biosamples smallmouth bass to assess population control methods and interviews anglers to develop a community plan.  
