--- a/pages/2447.qmd
+++ b/pages/2447.qmd
@@ -5,8 +5,9 @@ title: "Innovative Ecosystem Based Approaches to identify cumulative stressors: 
 ## 🧬 Project Summary
 
 **Lead(s):** Kristi Miller-Saunders  
+**Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
+**Section:** Molecular Genetics  
 **Location:** ["Barkley Sound","Clayoquot Sound"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Salmon experience a variety of physiological stressors and pathogens over migration which can be monitored non-lethally using Fit-Chip technology. Chinook salmon will expose themselves to potentially impactful stressors to avail feeding opportunities, enhancing vulnerability to cumulative stressors. eDNA data resolves habitat usage for Chinook salmon and demonstrating they associate with high biomass areas (prey availability), including aquaculture facilities, and avoid harmful algae. Models addressing the cumulative and synergistic interplay between factors will inform which levers under human control will result in strongest outcomes for salmon.
