--- a/pages/2448.qmd
+++ b/pages/2448.qmd
@@ -5,8 +5,9 @@ title: "Developing a proactive, modernized, holistic approach to ensure optimal 
 ## 🧬 Project Summary
 
 **Lead(s):** Kristi Miller-Saunders  
+**Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
+**Section:** Molecular Genetics  
 **Location:** ["Robertson Creek","Nitinat"]  
-**Status:** Ongoing  
 
 **Overview:**  
 A proactive holistic health monitoring approach based on high throughput molecular technologies has been validated for utility in two salmon enhancement hatcheries, and is now ready for minimally invasive application in hatcheries culturing conservation stocks. The technical approach revealed annual shifts in stress, infection, and timing of smolt readiness. Future monitoring of pathogens in hatchery source water is crucial to minimize infection potential and maximize post-release survival in stocks of conservation concern.
