--- a/pages/2449.qmd
+++ b/pages/2449.qmd
@@ -5,8 +5,9 @@ title: "A decision-support tool that considers harvest, hatchery, and habitat ma
 ## 🧬 Project Summary
 
 **Lead(s):** Carrie Holt, Brendan Connors, Catarina Wor  
-**Location:** N/A  
-**Status:** Ongoing  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** Quantitative Assessment Methods  
+**Location:**   
 
 **Overview:**  
 Resource managers rely on decision modelling tool and programs to predict the outcomes from different actions. For salmon management, often these tools fail to include hatchery or habitat parameters. This decision-support project develops an open source, single-population prototype model that can be applied to West Coast Vancouver Island Chinook as a case study, including hatchery and habitat levers, as well as, uncertainty and risk.
