--- a/pages/2451.qmd
+++ b/pages/2451.qmd
@@ -5,8 +5,9 @@ title: "Relative reproductive success of hatchery- versus natural-origin salmon 
 ## 🧬 Project Summary
 
 **Lead(s):** Eric Rondeau, Tim Healy, Kyle Wellband  
+**Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
+**Section:** Molecular Genetics  
 **Location:** ["Sarita River"]  
-**Status:** Ongoing  
 
 **Overview:**  
 Salmon bred from a hatchery are often less fit in wild environments than naturally bred salmon. However, this situation can change using different hatchery methods. This genetic study compares DNA samples from returning hatchery Chinook to natural Chinook in Sarita River to see if hatchery methods improve the spawning success of hatchery Chinook.
