--- a/pages/2454.qmd
+++ b/pages/2454.qmd
@@ -5,8 +5,9 @@ title: "Kim Hyatt’s Legacy Data: Juvenile Sockeye Biosample Data and Summary M
 ## 🧬 Project Summary
 
 **Lead(s):** Athena Ogden, Patrick Thompson, Michelle Charbonneau  
-**Location:** N/A  
-**Status:** Not funded  
+**Division:** Ecosystem Sciences (ESD)  
+**Section:** Regional Ecosystems Effects on Fish and Fisheries  
+**Location:**   
 
 **Overview:**  
-No description available.
+
