More and more and more formatting

--- a/index.qmd
+++ b/index.qmd
@@ -3,10 +3,9 @@ title: "🌊 Pacific Salmon Science Speaker Series"
 description: "A curated collection of salmon science projects grouped by speaker themes, supporting conservation and research in British Columbia."
 author: "PSSI Implementation Team"
 format: html
-page-layout: custom
+toc: false
 ---
 
-::: {.panel-sidebar}
 ## 🗓️ Upcoming Talks
 
 - **Sept 20, 2025** – Dr. Jane Salmon: *Migration Talk*
@@ -16,11 +15,8 @@ page-layout: custom
 - **Oct 9, 2025** – Dr. Nina Estuary: *Estuarine Ecology*
 
 Explore the full project list grouped by speaker themes below.
-:::
 
 ## 🐟 Salmon Science Projects
-
-Explore projects grouped by speaker theme below.
 
 ### Fish health and disease
 
